--- a/CS_ASP_013-Abigail-O/MainWindow.xaml
+++ b/CS_ASP_013-Abigail-O/MainWindow.xaml
@@ -18,13 +18,15 @@
             </Image.RenderTransform>
         </Image>
 
-        <RadioButton x:Name="italianButton" Content="Italian" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,185,0,0"/>
-        <RadioButton x:Name="hamButton" Content="Ham" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,165,0,0" Cursor="No"/>
-        <RadioButton x:Name="wheatButton" Content="Wheat" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,162,0,0" Width="88" Height="18"/>
-        <RadioButton x:Name="flatButton" Content="Flat Bread (+ $0.50)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,205,0,0"/>
-        <RadioButton x:Name="steakButton" Content="Steak (+ $1.50)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,225,0,0" Cursor="No"/>
-        <RadioButton x:Name="meatballButton" Content="MeatBall (+ $1.00)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,205,0,0" Cursor="No"/>
-        <RadioButton x:Name="chickenButton" Content="Roasted Chicken" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,185,0,0" Cursor="No"/>
+        <GroupBox x:Name="breadGroup" Header="" HorizontalAlignment="Left" Height="92" Margin="69,148,0,0" VerticalAlignment="Top" Width="139" Visibility="Hidden"/>
+
+        <RadioButton x:Name="italianButton" Content="Italian" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,185,0,0" GroupName="bread"/>
+        <RadioButton x:Name="hamButton" Content="Ham" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,165,0,0" Cursor="No" GroupName="meat"/>
+        <RadioButton x:Name="wheatButton" Content="Wheat" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,162,0,0" Width="88" Height="18" GroupName="bread"/>
+        <RadioButton x:Name="flatButton" Content="Flat Bread (+ $0.50)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="78,205,0,0" GroupName="bread"/>
+        <RadioButton x:Name="steakButton" Content="Steak (+ $1.50)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,225,0,0" Cursor="No" GroupName="meat"/>
+        <RadioButton x:Name="meatballButton" Content="MeatBall (+ $1.00)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,205,0,0" Cursor="No" GroupName="meat"/>
+        <RadioButton x:Name="chickenButton" Content="Roasted Chicken" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,185,0,0" Cursor="No" GroupName="meat"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="507,292,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
         <Label x:Name="sandwhichLabel" Content="Your sandwhich" HorizontalAlignment="Left" Height="31" Margin="52,293,0,0" VerticalAlignment="Top" Width="98"/>
         <Label HorizontalAlignment="Left" Margin="78,127,0,0" VerticalAlignment="Top" Height="30" Width="72" Content="Bread" FontWeight="Bold" FontSize="16"/>
@@ -35,8 +37,8 @@
         <CheckBox x:Name="cucumberBox" Content="Cucumber" HorizontalAlignment="Left" Margin="550,162,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="swissBox" Content="Swiss (+ $0.30)" HorizontalAlignment="Left" Margin="401,185,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="americanBox" Content="American (+ $0.25)" HorizontalAlignment="Left" Margin="401,165,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="sixSubButton" Content="Six Inch Sub ( $3.50 )" HorizontalAlignment="Left" Margin="343,101,0,0" VerticalAlignment="Top"/>
-        <RadioButton x:Name="footLongButton" Content="Foot Long Sub ( $5.00 )" HorizontalAlignment="Left" Margin="507,101,0,0" VerticalAlignment="Top"/>
+        <RadioButton x:Name="sixSubButton" Content="Six Inch Sub ( $3.50 )" HorizontalAlignment="Left" Margin="343,101,0,0" VerticalAlignment="Top" GroupName="sub"/>
+        <RadioButton x:Name="footLongButton" Content="Foot Long Sub ( $5.00 )" HorizontalAlignment="Left" Margin="507,101,0,0" VerticalAlignment="Top" GroupName="sub"/>
         <Label Content="Size Sub" HorizontalAlignment="Left" Margin="248,91,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
         <Label Content="Meat" HorizontalAlignment="Left" Margin="206,128,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
         <Label Content="Cheese" HorizontalAlignment="Left" Margin="401,132,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
