--- a/CS_ASP_013-Abigail-O/MainWindow.xaml
+++ b/CS_ASP_013-Abigail-O/MainWindow.xaml
@@ -27,8 +27,8 @@
         <RadioButton x:Name="steakButton" Content="Steak (+ $1.50)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,225,0,0" Cursor="No" GroupName="meat"/>
         <RadioButton x:Name="meatballButton" Content="MeatBall (+ $1.00)" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,205,0,0" Cursor="No" GroupName="meat"/>
         <RadioButton x:Name="chickenButton" Content="Roasted Chicken" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="208,185,0,0" Cursor="No" GroupName="meat"/>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="507,292,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
-        <Label x:Name="sandwhichLabel" Content="Your sandwhich" HorizontalAlignment="Left" Height="31" Margin="52,293,0,0" VerticalAlignment="Top" Width="98"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="649,353,0,0" VerticalAlignment="Top" Width="109" Click="Button_Click" Height="41"/>
+        <Label x:Name="sandwhichLabel" Content="Your sandwhich" HorizontalAlignment="Left" Height="63" Margin="52,293,0,0" VerticalAlignment="Top" Width="450"/>
         <Label HorizontalAlignment="Left" Margin="78,127,0,0" VerticalAlignment="Top" Height="30" Width="72" Content="Bread" FontWeight="Bold" FontSize="16"/>
         <CheckBox x:Name="lettuceBox" Content="Lettuce (+ $0.15)" HorizontalAlignment="Left" Margin="550,205,0,0" VerticalAlignment="Top"/>
         <CheckBox x:Name="onionBox" Content="Red Onion (+ $0.10)" HorizontalAlignment="Left" Margin="550,225,0,0" VerticalAlignment="Top"/>
@@ -45,6 +45,7 @@
         <CheckBox x:Name="allBox" Content="All Veggies (+ $0.25)" HorizontalAlignment="Left" Margin="550,245,0,0" VerticalAlignment="Top"/>
         <Label Content="Veggies" HorizontalAlignment="Left" Margin="550,132,0,0" VerticalAlignment="Top" FontSize="16" FontWeight="Bold"/>
         <Label Content="Special *** $2.00 Off Foot Long/ Wheat/ Meatball/ American Cheese" HorizontalAlignment="Left" Margin="36,361,0,0" VerticalAlignment="Top"/>
+        <Label x:Name="totalLabel" Content="TOTAL" HorizontalAlignment="Left" Margin="525,363,0,0" VerticalAlignment="Top" Height="24" Width="70"/>
 
     </Grid>
 </Window>
